--- a/ventasOnline/pom.xml
+++ b/ventasOnline/pom.xml
@@ -133,6 +133,11 @@
 		    <artifactId>sitemesh</artifactId>
 		    <version>2.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.9</version>
+		</dependency>
 				<!-- Spring Security -->
 		<!-- <dependency>
 			<groupId>org.springframework.security</groupId>
